mouse leave animation fixed on mobile for exit

--- a/3d-portafolio/src/components/bedroomExperience/world/helper/InfoHelper.module.css
+++ b/3d-portafolio/src/components/bedroomExperience/world/helper/InfoHelper.module.css
@@ -1,4 +1,4 @@
-.container{
+.container {
   position: absolute;
   bottom: 1rem;
   left: 1rem;
@@ -24,9 +24,13 @@
   border-radius: 8px;
 }
 
-
 /* Tablet and Phone */
 @media screen and (max-width: 768px) {
+  .container {
+    pointer-events: none;
+    touch-action: none;
+  }
+
   .image {
     width: 3rem;
     height: 3rem;
